--- a/hellorootkitty.tex
+++ b/hellorootkitty.tex
@@ -576,11 +576,13 @@ In this section we explore related work that attempts to protect a kernel using 
 
 \subsection{Hardware-based countermeasures} \label{hardware}
 \paragraph{Copilot}
-Copilot \cite{copilot} is a kernel integrity monitor which detects illegal modifications to a host kernel by fetching the physical memory pages where kernel data and code have been stored. The detection strategy of the monitor is based on checking the integrity of kernel data structures with the aid of MD5 hashes. The above detection is performed by a dedicated PCI card, equipped of a coprocessor that fetches kernel pages at regular intervals. Although the measured performance impact is relatively negligible, this mitigation technique is affected by several limitations. Since the detection mechanism is running within the same kernel to protect, the detection will fail when the target kernel is sufficiently modified. As the authors claim in their work, when the kernel itself lies about its integrity, all other system utilities will receive this information and consider it trustworthy. Even in the presence of dedicated hardware, the fact that it is controlled by the target operating system can influence the overall effectiveness of the countermeasure. 
-In a testbed similar to the one we propose in our solution, which consists in performing checking of kernel data  every 5 seconds, the overall performance impact has been measured to 3.80\% (WebStone throughput results) compared to the performance of a native system.   
+Copilot \cite{copilot} is a kernel integrity monitor which detects illegal modifications to a host kernel by fetching the physical memory pages where kernel data and code have been stored. The detection strategy of the monitor is based on checking the integrity of kernel data structures with the aid of MD5 hashes. The above detection is performed by a dedicated PCI card, equipped of a coprocessor that fetches kernel pages at regular intervals. Although the measured performance impact is relatively negligible, this mitigation technique is affected by several limitations. Since the detection mechanism is running within the same kernel to protect, the aforementioned detection will fail when the target kernel is sufficiently modified. As the authors claim in their work, when the kernel itself lies about its integrity, all other system utilities will receive this information and consider it trustworthy. Even in the presence of dedicated hardware, the fact that it is controlled by the target operating system can influence the overall effectiveness of the countermeasure. 
+In a testbed similar to the one we propose in our solution, which consists in performing checking of kernel data every 5 seconds, the overall performance impact has been measured to 3.80\% (WebStone throughput results) compared to the performance of a native system.   
 Another shortcoming of Copilot is represented by access limited to main memory: there is no way for Copilot to inspect CPU registers, since it is not possible to pause the CPU's execution of the target system. In our solution, whenever control is returned to the hypervisor, which performs kernel integrity checking, the guest system is paused. A snapshot of the register set of a paused system can be inspected in hypervisor space relatively easily. In our prototype we check the integrity of the Interrupt Descriptor Table Register (IDTR). It goes without saying that the entire register set of the guest machine can be checked with the same mechanism. 
-Because Copilot accesses host memory via the PCI bus, there are chances to find kernel data structures in an inconsistent state whenever the monitor performs a DMA access (direct access to physical memory) and a process is modifying them at the same time. Our solution avoids race conditions of this type by invalidating the virtual to physical mapping in the TLB upon returning control to the guest operating system. Specifically, when the hypervisor is repairing (writing) a compromised kernel structure, a process that was using that data before will find an inconsistency. However invalidating the virtual-physical address mapping will force the process to remap the new content stored at the physical address.
+Because Copilot accesses host memory via the PCI bus, there are chances to find kernel data structures in an inconsistent state whenever the monitor performs a DMA access (direct access to physical memory) and a process is modifying them at the same time. Our solution avoids race conditions of this type by invalidating the virtual to physical mapping in the TLB (Translation Lookaside Buffer) upon returning control to the guest operating system. Specifically, when the hypervisor is repairing (writing) a compromised kernel structure, a process that was using that data before will find an inconsistency. However, invalidating the virtual-physical address mapping will force the process to remap the new content stored at the physical address.
 The strategy of checking integrity every 30 seconds makes the Copilot monitor susceptible to timed attacks. A rootkit that compromises kernel data and rapidly repairs it will stay unnoticed. Although our mitigation technique is affected by the same problem, we provide a probabilistic analysis that shows the chances of successful timed attacks under several conditions.
+
+%OK
 
 \paragraph{Gibraltar}
 A system that, similarly to the one described in the previous sections, detects violation of kernel data structures integrity is Gibraltar \cite{6}. Gibraltar executes on a separate machine, called the observer, and monitors the integrity of the kernel running in another machine, physically separated, called the target. Both the observer and the target are connected by the Myrinet PCI intelligent network card. Within such an architecture the observer can remotely access the physical pages of the target kernel. Gibraltar is formed by three main components: the page fetcher, the invariant generator engine and the monitor. The page fetcher, which executes on the observer, fetches the page of a given memory address of the target, where the PCI card has been installed. The PCI device initiates a DMA request for the requested page and send the content back to the observer.
@@ -597,52 +599,53 @@ However, the main limitation is represented by the isolation requirement which i
 A countermeasure specifically designed to prevent the execution of unauthorized code is described in \cite{SecVisor}. For the reasons explained in the previous sections, malicious code executing in kernel mode can be extremely dangerous. SecVisor ensures that only approved code can be executed in kernel mode. It comes in the form of a tiny hypervisor that operates at VMX root mode, exploiting the virtualisation capabilities of modern hardware architectures like AMD and Intel. By validating kernel code before executing it, SecVisor prevents the execution of injected code, as is the case of kernel rootkits. 
 Existing kernel code is also protected in order to prevent any illegal modification from unauthorised parties. In order to achieve the aforementioned goals, SecVisor virtualises the physical memory to set CPU-based memory protections over the kernel, the IO Memory Management Unit (IOMMU) to protect code from DMA writes, and the CPU Memory Management Unit (MMU) in order to check any modification to the MMU from the protected kernel. 
 The very limited amount of changes that need to be applied to port an operating system like Linux to execute on SecVisor makes it an attractive solution against rootkits. Unfortunately, the overhead of virtualising memory and shadowing several components of the CPU is very high, compared to other solutions that can achieve the same degree of security.
-Another limitation arise from the security evaluation of SecVisor: since control flow integrity is not guaranteed, \emph{return-to-libc}\footnote{This type of attacks usually overwrites the return address on the call stack, replacing it with the address of a function that is already loaded in the binary and that provides the functionality required by the attacker, otherwise implemented by injecting new code.}  type attacks are still possible. For instance, an attacker can pass control to a kernel function of his choice by overwriting the return address of another function within the same kernel space. Such a  behaviour is considered totally legal by SecVisor.
+Another limitation arises from the security evaluation of SecVisor: since control flow integrity is not guaranteed, \emph{return-to-libc}\footnote{This type of attacks usually overwrites the return address on the call stack, replacing it with the address of a function that is already loaded in the binary and that provides the functionality required by the attacker, otherwise implemented by injecting new code.}  type attacks are still possible. For instance, an attacker can pass control to a kernel function of his choice by overwriting the return address of another function within the same kernel space. Such a  behaviour is considered totally legal by SecVisor.
 
 \paragraph{NICKLE}
-A system that prevents the execution of rootkits by detecting the presence of malicious code before its execution is NICKLE \cite{NICKLE}. It comes in the form of a minimal hypervisor which prevents unauthorized kernel code execution. The main advantages of this solutions consists in the fact that it does not require modifications to the guest OS kernel. Therefore commodity OSes can be supported without recompilation or reinstallation. 
-To overcome the problem of single memory space for kernel code and user code, NICKLE implements a memory shadowing system that is controlled by the virtual machine monitor and non accessible to the guest. 
+A system that prevents the execution of rootkits by detecting the presence of malicious code before its execution is NICKLE \cite{NICKLE}. It comes in the form of a minimal hypervisor which prevents unauthorised kernel code execution. One of the main advantages of such a solution consists in the fact that no changes to the guest OS kernel are required. Therefore commodity OSes can be supported without recompilation or reinstallation. 
+To overcome the problem of single memory space for kernel code and user code, NICKLE implements a memory shadowing system that is controlled by the virtual machine monitor and that is not accessible to the guest. 
 The hypervisor maintains a shadow physical memory to store authenticated guest kernel code. Upon the startup of the VM, that is assumed to be in a untampered trusted state, authenticated guest kernel instructions will be copied from the guest's standard memory to the shadow memory controlled by NICKLE. Another specific event that triggers NICKLE's intervention is the loading/unloading of loadable kernel modules. Loading a module is  considered injecting code, that needs to be authenticated and validated before execution. 
-At system startup the guest's shadow memory is empty and the system bootstrap code will be verified and copied into the shadow memory. After the kernel has been loaded and decompressed, a cryptographic hash is used to verify its integrity. Then kernel code is copied from standard memory to shadow memory. If the hash values do not match with values computed previously off-line by an administrator or distribution maintainer the code will not be copied to the shadow memory.
+At system startup the guest's shadow memory is expected to be empty. At this stage, the system bootstrap code will be verified and copied into the shadow memory. After the kernel has been loaded and decompressed, a cryptographic hash is used to verify its integrity. The kernel code is then copied from standard memory to shadow memory. If the hash values do not match with the values computed previously, the code will not be copied to the shadow memory. An administrator or distribution maintainer is supposed to perform such computations beforehand.
 The actual protection occurs after validation, when the virtual machine is about to execute a kernel instruction. At this point NICKLE will redirect the instruction fetch to the shadow memory rather than standard memory, after verifying that the current instruction is authenticated. 
 Memory accesses to user code, user data and kernel data will proceed without any intervention. 
 Kernel rootkit attacks would be detected and prevented since invalidated code would attempt to run in kernel mode.   
 A recent attack to bypass countermeasures against code injection attacks, such as the Non-Executable stack countermeasure, is Return Oriented Programming (ROP) \cite{geometry}. This method of attacking has been used to create return-oriented rootkits which re-use fragments of authorized kernel code for malicious purposes \cite{Hund2009}. Such rootkits can bypass countermeasures like the ones proposed in \cite{NICKLE, SecVisor}.
-
+%OK
 
 \paragraph{Hookscout}
 Yin et al. \cite{hookscout} focus on kernel function pointers and protect them from being compromised by rootkits. 
 They developed a function pointer protection system called Hookscout. 
-The main observation of the authors is that, in many cases, access to source code of the operating system to be protected is not available. Therefore, they provide a binary-centric solution that can generate a hook detection policy without access to the OS kernel source code. 
+The main observation of the authors is that, in many cases, access to the source code of the operating system to be protected is not available. Therefore, they provide a binary-centric solution that can generate a hook detection policy without accessing  the OS kernel source code. 
 Their approach is also context-sensitive. This allows detection of kernel hooks even in the presence of polymorphic data structures.
 The approach consists of an analysis and a detection phases.
-The idea of Hookscout consists in performing dynamic binary analysis of the target system in order to monitor kernel memory objects and keep track of function pointers propagating in kernel space. Since kernel function pointers are the main target of kernel rootkits, the aforementioned analysis can detect how function pointers are created, distributed and used. Moreover all memory objects allocated statically or dynamically are monitored.
-The analysis is performed by TEMU, a dynamic binary analysis platform based on QEMU. Therefore the target system needs to be run within an emulator. This is the main cause of the overall performance impact.
+The idea of Hookscout consists in performing dynamic binary analysis of the target system in order to monitor kernel memory objects and keep track of function pointers propagating in kernel space. Since kernel function pointers are the main target of kernel rootkits, the aforementioned analysis can detect how function pointers are created, distributed and used. Moreover, all memory objects allocated statically or dynamically are monitored.
+The analysis is performed by TEMU, a dynamic binary analysis platform based on QEMU. Therefore, the target system needs to be run within an emulator. This is the main cause of the overall performance impact.
 During the analysis, the emulated operating system is tested with common test cases, while the monitor engine collects system information such as the state of memory objects and function pointers. Given this information as input to an inference engine, context-sensitive analysis is performed in order to generate the policy for hook detection.
-In the detection phase, the detection engine, located within the target system, enforces the policy generated
+During the detection phase, the detection engine, located within the target system, enforces the policy generated
 during the analysis phase and detects hooks in the kernel space at runtime.
 It goes without saying that Hookscout's effectiveness can be compromised by a rootkit capable of disabling the protection since the detection system resides within the same target machine.
-
+%OK
 
 \paragraph{HookSafe}
 Another system that can protect thousands of kernel hooks from being compromised is HookSafe \cite{HookSafe}. Commodity hardware can provide protection with page-level granularity, meaning that protection flags can be set for a page, not for a byte. Since protection of kernel objects needs byte-level granularity, the authors of HookSafe consider the former type of protection not sufficient against rootkits.
 HookSafe is a hypervisor-based system that relocates kernel hooks to be protected to a dedicated page and then exploits the regular page-level protection of the MMU to protect that page.
-This is doable due to the fact that a kernel hook, once initialized, will be frequently read-accessed and rarely write-accessed. Therefore a relocation of those pointers will not affect the functionality of the overall system.
-The concept of shadow memory is used to copy the kernel hooks in a centralised location. Attempts to modify the shadow copy will be trapped by the hypervisor which will verify if the caller has enough permissions to modify the  protected area. Read accesses will be redirected without any intervention to the shadow copy.
+This is doable due to the fact that a kernel hook, once initialised, will be frequently read-accessed and rarely write-accessed. Therefore, a relocation of those pointers will not affect the functionality of the overall system.
+The concept of shadow memory is used to copy the kernel hooks in a centralised location. Attempts to modify the shadow copy will be trapped by the hypervisor which will verify if the caller has enough permissions to modify the protected area. Read accesses will be redirected without any intervention to the shadow copy.
 A layer between the guest and the hypervisor will handle read and write accesses accordingly. Since the hypervisor is the only component that can write to the memory pages of the protected kernel, control needs to be transferred from the guest to the hypervisor, which will modify on guest's behalf, and then back to the guest kernel.
 Kernel rootkits can target areas different from regular memory-based function pointers, such as hardware registers like GDTR, IDTR, SYSENTER and MSR. Being HookSafe a hypervisor-based countermeasure, access to hardware registers can be regulated. Any attempt to write to these registers is intercepted and validated. 
 %Related to the hardware register protection is how we secure the GDT and IDT descriptor tables. These two tables contain critical system data structures and their contents must be protected. We protect these two tables using the hardware-based page-level protection.
-The main limitation of HookSafe consists in the fact that it does not protect non-control kernel data. Therefore rootkits that target this type of data structures would not be prevented.
-
+The main limitation of HookSafe consists in the fact that it does not protect non-control kernel data. Therefore, rootkits that target this type of data structures would not be prevented.
+%OK
 
 \paragraph{SBCFI}
 An approach that dynamically monitors operating system kernel integrity is described in \cite{SBCFI}. In this work the authors argue that enforcing control flow integrity can effectively protect against a large class of kernel rootkits. The main observation consists in the fact that, despite the specific behaviour of rootkits (such as injecting code, compromising function pointers, changing the value of specific registers, etc.), the execution flow of a compromised system will differ from the execution flow determined before the attack.
 Therefore, control flow integrity can be considered a valuable measure of the integrity of the overall system.
 Due to the persistent nature of rootkits, monitoring control flow integrity continuously is not required. Infrequent monitoring can still effectively protect the system and reduce the performance overhead consistently.
 SBCFI enforces an approximation of control flow integrity, called state-based control flow integrity. While control flow integrity checks each branch of a precomputed control flow graph in step with the program's execution, SBCFI periodically examines the kernel's state and validates it as a whole.
-The target kernel code is first checked for any modification, then all static branches are validated. In a successive phase, all usable function pointers of the heap are verified that they target valid code.
+The target kernel code is first checked for any modification, then all static branches are validated. In a subsequent phase, all usable function pointers of the heap are verified that they target valid code.
 The approximated nature of control flow integrity makes the overhead of SBCFI negligible. Moreover, the control flow integrity monitor can be isolated from the target operating system. 
-Both the implementations of SBCFI on top of the Xen hypervisor and the VMware Workstation virtual machine monitor have similar performance impact.
+Both the implementations of SBCFI on top of the Xen hypervisor and the VMware Workstation virtual machine monitor have a similar performance impact.
+%OK
 
 
 \begin{table}
@@ -673,7 +676,7 @@ Both the implementations of SBCFI on top of the Xen hypervisor and the VMware Wo
 
 
 \vspace{-0.3cm}
-\caption{Comparison of existent countermeasures that protect commodity operating systems against kernel mode rootkits. Column \textit{protect nc data} indicates whether non-control data are protected; \textit{special hw} indicates whether special purpose hardware is required; \textit{protect ROP} indicates whether the countermeasure protects against Return-Oriented Programming attacks; \textit{Overhead} indicates whether the overhead of the countermeasure is low or high}
+\caption{Comparison of existent countermeasures that protect commodity operating systems against kernel mode rootkits. Column \textit{protect nc data} indicates whether non-control data are protected; \textit{special hw} indicates whether special-purpose hardware is required; \textit{protect ROP} indicates whether the countermeasure protects against Return-Oriented Programming attacks; \textit{Overhead} indicates whether the overhead of the countermeasure is low or high}
 \vspace{0.3cm}
 \label{compcountermeasures}
 \end{table}
@@ -684,33 +687,34 @@ Although not specifically designed to protect against rootkits, malware analysis
 Most state-of-the-art analysis approaches share the same execution space of the malware that is being analysed. This can reduce the value and effectiveness of the analysis because some malware can detect the analysis platform and behave differently than in the real target system. 
 The isolation capability of virtualisation technology and the ability to save and restore the state of a guest operating system are offering new tools to shed light on the complex techniques of malware development. 
 General purpose hypervisors are usually not suitable for the purpose of analysing malware because they provide access to an emulated version of the hardware making the entire virtualisation platform visible to complex malicious software. 
-Recent malware like Storm and Conficker are known to detect they are running inside a virtual machine and behave differently \cite{conficker, ecards}
+Recent malware like Storm and Conficker are known to detect they are running inside a virtual machine and behave differently \cite{conficker, ecards}.
+%OK
 
 
 \paragraph{MAVMM}
-MAVMM \cite{MAVMM} is a virtual machine monitor specifically designed for malware analysis. It can extract useful information for a complete profile of the investigated malware such as memory pages, system calls and accesses to disks and network devices. Contrarily to other hypervisors, MAVMM lets most hardware access requests go through without interception. This feature makes the entire platform invisible to the malware while still controlling accesses to the aformentioned areas of the system. The analysis platform only intercepts guest execution at a few places, in order to protect its own integrity and log the guests' behaviours for further analysis. Hardware supported Nested Page Tables (NPT) are used to protect its memory from being compromised by the guest, while an IOMMU unit is used to prevent any tamper by external hardware devices via DMA.
+MAVMM \cite{MAVMM} is a virtual machine monitor specifically designed for malware analysis. It can extract useful information for a complete profile of the investigated malware such as memory pages, system calls and accesses to disks and network devices. Contrarily to other hypervisors, MAVMM lets most hardware access requests go through without interception. This feature makes the entire platform invisible to the malware while still controlling accesses to the aforementioned areas of the system. The analysis platform only intercepts guest execution at a few places, in order to protect its own integrity and log the guests' behaviours for further analysis. Hardware supported Nested Page Tables (NPT) are used to protect its memory from being compromised by the guest, while an IOMMU unit is used to prevent any tamper by external hardware devices via DMA.
 The execution trace of a guest program is recorded by single stepping its execution at each instruction. This is implemented by virtualising the TF flag that will raise a debugger exception, which will in turn be intercepted by MAVMM. 
 A log of executed system calls can give a good picture of what the malware under investigation is trying to do. MAVMM can record all system calls that a guest system invokes during its lifetime. Selective analysis of specific processes in the guest is also possible by notifying MAVMM each time a process switch occurs in the guest.
 A known issue to deal with consists of choosing the safest location to which log files can be stored and subsequently analysed. Using the same disk device would expose collected data to the attacker. Therefore, an USB flash drive or a separate disk unit controlled by different device drivers is an approach preferred by the authors.
-
+%OK
 
 
 \paragraph{Hookmap}
-Wang et al. \cite{hookmap} proposed Hookmap, an analysis tool against persistent rootkits. Hookmap is based on the observation that rootkits try to hide their presence within the target kernel and they usually install kernel hooks on the corresponding kernel-side execution path invoked by the target program. Therefore given a security program, the authors argue that an analysis of its kernel-side execution path would be sufficient to detect and investigate a rootkit's behaviour. As a consequence, the user-side execution path might be neglected. Linux utility programs like \emph{ls}, \emph{ps} and \emph{netstat} have been analysed and their relative kernel hooks identified. Hookmap found 35 kernel hooks mapped to the \emph{ls} utility, 85 kernel hooks for \emph{ps} and so forth. As a result, this approach uncovers those kernel hooks that can be potential targets of attacks. By recording possible control-flow transfer instructions in the kernel-side execution paths, Hookmap is able to derive all related kernel hooks and search for abnormalities at runtime. The authors exploit virtualisation technology and system emulation software QEMU to perform their analysis in complete isolation.
- 
+Wang et al. \cite{hookmap} proposed Hookmap, an analysis tool against persistent rootkits. Hookmap is based on the observation that rootkits try to hide their presence within the target kernel and they usually install kernel hooks on the corresponding kernel-side execution path invoked by the target program. Therefore, given a security program, the authors argue that an analysis of its kernel-side execution path would be sufficient to detect and investigate a rootkit's behaviour. As a consequence, the user-side execution path might be neglected. Linux utility programs like \emph{ls}, \emph{ps} and \emph{netstat} have been analysed and their relative kernel hooks identified. For instance, Hookmap found 35 kernel hooks mapped to the \emph{ls} utility, 85 kernel hooks for \emph{ps} and so forth. As a result, this approach uncovers those kernel hooks that can be potential targets of attacks. By recording possible control-flow transfer instructions in the kernel-side execution paths, Hookmap is able to derive all related kernel hooks and search for abnormalities at runtime. The authors exploit virtualisation technology and system emulation software QEMU to perform their analysis in complete isolation.
+%OK 
 
 \paragraph{HookFinder}
-An approach that does not rely on any prior knowledge of hooking mechanisms is HookFinder \cite{hookfinder}. Therefore it represents a suitable tool to identify novel hooking mechanisms. To overcome the limitation of static analysis, that can be easily circumvented by malicious programs equipped with code obfuscation techniques, HookFinder relies on dynamic analysis. This means that malware programs are analysed while being executed within a controlled environment. A whole-system emulator is used for the purpose. All the information collected by the three main components of HookFinder, namely the impact engine, the hook detector and the semantics extractor, is used to derive how the rootkit implants the hook and how the hook is activated by the operating system. When the malware starts executing, the initial impacts, that is data written directly by the malicious code (and by external components, on behalf of malicious code) are added to a list to be monitored. Then HookFinder keeps track of the impacts propagating through the whole system. For instance, if it is observed that the instruction pointer is loaded with a monitored impact, and the execution jumps immediately into the malicious code, then a hook has been identified.
+An approach that does not rely on any prior knowledge of hooking mechanisms is HookFinder \cite{hookfinder}. Therefore it represents a suitable tool to identify novel hooking mechanisms. To overcome the limitation of static analysis, that can be easily circumvented by malicious programs equipped with code obfuscation techniques, HookFinder relies on dynamic analysis. This means that malware programs are analysed while being executed within a controlled environment. A whole-system emulator is used for the purpose. All the information collected by the three main components of HookFinder, namely the impact engine, the hook detector and the semantics extractor, is used to derive how the rootkit implants the hook and how the hook is activated by the operating system. When the malware starts executing, the initial impacts, that is data written directly by malicious code (and by external components, on behalf of malicious code) are added to a list to be monitored. Then HookFinder keeps track of the impacts propagating through the whole system. For instance, if it is observed that the instruction pointer is loaded with the address of a monitored impact, and the execution jumps immediately into the malicious code, a hook has been identified.
 Once a hook has been identified, HookFinder logs into a trace the details about its behaviour within the system. By combining the information of the trace and operating system level semantics, HookFinder can provide an intuitive graphical representation that might be useful to malware analysts for a better understanding of the hooking mechanism under investigation.
-
+%OK
 
 
 \paragraph{PoKer}
-Another virtualisation-based rootkit profiler is described in \cite{PoKer}. PoKer can log the rootkit hooking behaviour, it can monitor targeted kernel objects, extract kernel rootkit code and infer the potential impact on user-level programs. Poker is deployed in systems that can tolerate non negligible performance impact such as honeypots, for which correctly profiling a rootkit has a higher priority than profiling it faster. The overall system with PoKer enabled executes 3.8 times slower then the equivalent system without PoKer.
+Another virtualisation-based rootkit profiler is described in \cite{PoKer}. PoKer can log the rootkit hooking behaviour, it can monitor targeted kernel objects, extract kernel rootkit code and infer the potential impact on user-level programs. Poker is deployed in systems that can tolerate non negligible performance impact such as honeypots, for which correctly profiling a rootkit has a higher priority than performance. The overall system with PoKer enabled executes 3.8 times slower then the equivalent system without PoKer.
 The profiler will be enabled after the first malicious instruction has been executed. The techniques described by NICKLE and SecVisor are considered by PoKer to ensure that all actions are logged after this specific event.
 At this point, PoKer switches to a rootkit profiling mode, by activating a separate virtual machine, and starts to determine the static and dynamic objects that are being targeted by the rootkit. In order to accurately profile compromised objects, PoKer needs to access the source code of the operating system kernel or debugging symbols and type information of a compiled kernel binary. Gathered information is stored outside the target virtual machine, to prevent any tamper with the rootkit under investigation.
 Interpreting the traces and resolving read and write target addresses is considered a challenging task, due to the difficulty of identifying the corresponding kernel object, given an arbitrary memory address.
-Since virtualisation technology does not support such a reverse lookup, an address-to-dynamic object table map is used to translate memory addresses into kernel objects. An initial map of static objects, combined to the rootkit's reads is a sufficient information to build the aforementioned map on the fly.
+Since virtualisation technology does not support such a reverse lookup, an address-to-dynamic object table map is used to translate memory addresses into kernel objects. An initial map of static objects, combined to the rootkit's reads is a sufficient information to build the aforementioned map at runtime.
 
 
 
